--- a/Homework_13_bank_system/MainWindow.xaml
+++ b/Homework_13_bank_system/MainWindow.xaml
@@ -6,6 +6,8 @@
         xmlns:local="clr-namespace:Homework_13_bank_system"
         xmlns:tb="http://www.hardcodet.net/taskbar"
         mc:Ignorable="d"
+        x:Name="mainWindow"
+        Visibility="Visible"
         Title="MainWindow" Height="450" Width="800" 
         Background="Transparent" WindowStyle="None" 
         ResizeMode="CanResizeWithGrip" AllowsTransparency="True">
@@ -22,13 +24,21 @@
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="300"/>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="30"/>
                     <ColumnDefinition Width="30"/>
                     <ColumnDefinition Width="30"/>
                     <ColumnDefinition Width="10"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Column="2" 
+                <Menu Grid.Column="1">
+                    <MenuItem Header="Файл" Height="24" Margin="3">
+                        <MenuItem Name="savingBtn" Header="Сохранить данные" HorizontalAlignment="Left" Click="savingBtn_Click"/>
+                        <Separator/>
+                        <MenuItem Header="Выход из приложения" HorizontalAlignment="Left" Click="closeBtn_Click"/>
+                    </MenuItem>
+                </Menu>
+                <Button Grid.Column="3" 
                         Name="minBtn" 
                         Click="minBtn_Click" 
                         ToolTip="Minimize" 
@@ -37,7 +47,7 @@
                         BorderThickness="0">
                     <Image Source="\minBtn.png"/>
                 </Button>
-                <Button Grid.Column="3" 
+                <Button Grid.Column="4" 
                         Name="maxBtn" 
                         Click="maxBtn_Click" 
                         ToolTip="Maximize" 
@@ -46,7 +56,7 @@
                         BorderThickness="0">
                     <Image Source="\maxBtn.png"/>
                 </Button>
-                <Button Grid.Column="4" 
+                <Button Grid.Column="5" 
                         Name="closeBtn" 
                         Click="closeBtn_Click" 
                         ToolTip="Exit" 
