--- a/Homework_13_bank_system/App.xaml
+++ b/Homework_13_bank_system/App.xaml
@@ -2,19 +2,26 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Homework_13_bank_system"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LoginForm.xaml">
     <Application.Resources>
-        <Style x:Name="Headers" TargetType="Canvas">
-            <Setter Property="Background" Value="WhiteSmoke"/>
+        <!--<Style x:Name="Headers" TargetType="Canvas">
+            <Setter Property="Background" Value="#ABD926"/>
         </Style>
         <Style TargetType="Menu">
-            <Setter Property="Background" Value="LightGray"/>
+            <Setter Property="Background" Value="#9EC333"/>
             <Setter Property="Foreground" Value="#aeb5c5"/>
         </Style>
         <Style TargetType="MenuItem">
-            <Setter Property="Background" Value="Gray"/>
+            <Setter Property="Background" Value="#9EC333"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
-            <Setter Property="Foreground" Value="#aeb5c5"/>
-        </Style>
+            <Setter Property="Foreground" Value="AntiqueWhite"/>
+            <Setter Property="FontWeight" Value="Black"/>
+        </Style>-->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="MVVM/MenuBtn.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
+
 </Application>
