--- a/Homework_13_bank_system/App.xaml
+++ b/Homework_13_bank_system/App.xaml
@@ -19,7 +19,7 @@
         </Style>-->
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="MVVM/MenuBtn.xaml"/>
+                <ResourceDictionary Source="View/MenuBtn.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
