--- a/Homework_13_bank_system/App.xaml
+++ b/Homework_13_bank_system/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Homework_13_bank_system"
-             StartupUri="LoginForm.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <!--<Style x:Name="Headers" TargetType="Canvas">
             <Setter Property="Background" Value="#ABD926"/>
@@ -17,11 +17,13 @@
             <Setter Property="Foreground" Value="AntiqueWhite"/>
             <Setter Property="FontWeight" Value="Black"/>
         </Style>-->
+        
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="View/MenuBtn.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
+        
     </Application.Resources>
 
 </Application>
