--- a/Homework_13_bank_system/MainWindow.xaml
+++ b/Homework_13_bank_system/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Homework_13_bank_system"
         xmlns:viewModels="clr-namespace:Homework_13_bank_system.ViewModels"
+        xmlns:view="clr-namespace:Homework_13_bank_system.View"
         xmlns:tb="http://www.hardcodet.net/taskbar"
         mc:Ignorable="d"
         x:Name="mainWindow"
@@ -29,14 +30,24 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
+                <view:AdminPanel Margin="5,50,0,0" HorizontalAlignment="Left" Grid.Column="1"/>
                 <StackPanel 
                     Grid.Column="0" 
                     Background="#D9F096"
                     Margin="10,0,0,0">
                     <RadioButton 
+                        Content="Клиентская база"
                         Height="50"
                         Margin="0,37,0,0" 
-                        Style="{StaticResource MenuBtn}">
+                        Style="{StaticResource MenuBtn}" 
+                        IsChecked="False">
+                    </RadioButton>
+                    <RadioButton 
+                        Content="Админ панель"
+                        Height="50"
+                        Margin="0,0,0,0" 
+                        Style="{StaticResource MenuBtn}" 
+                        IsChecked="False">
                     </RadioButton>
                 </StackPanel>
             </Grid>
@@ -50,11 +61,12 @@
                     <ColumnDefinition Width="30"/>
                     <ColumnDefinition Width="30"/>
                     <ColumnDefinition Width="30"/>
-                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="7.975"/>
+                    <ColumnDefinition Width="2.025"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock 
                     Grid.Column="3" 
-                    Text="{Binding cUser, Mode=TwoWay}"/>
+                    Text="{Binding CUser, Mode=TwoWay}" />
                 <Menu  Grid.ColumnSpan="2">
                     <MenuItem 
                         Header="Файл"
@@ -101,7 +113,7 @@
                     <Image Source="\closeBtn.png"/>
                 </Button>
             </Grid>
-            <tb:TaskbarIcon 
+            <tb:TaskbarIcon
                 Visibility="Visible"
                 ToolTipText="banking"
                 IconSource="\icon.ico"
